src/components/FormikForm/FormikForm.css
/*
 * Copyright 2021 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */

@define-mixin intent {
  &.bp3-intent-primary {
    --bp3-intent-color: var(--primary-7);
  }

  &.bp3-intent-success {
    --bp3-intent-color: var(--green-500);
  }

  &.bp3-intent-warning {
    --bp3-intent-color: var(--yellow-500);
  }

  &.bp3-intent-danger {
    --bp3-intent-color: var(--red-500);
  }
}

.main {
  :global {
    .bp3-form-group {
      @mixin intent;

      .bp3-form-helper-text {
        color: var(--bp3-intent-color, var(--grey-500)) !important;
      }
      .bp3-file-upload-input,
      .ColorPicker--picker {
        box-shadow: none !important;
        border: 1px solid var(--grey-200) !important;
      }

      .bp3-input {
        height: var(--spacing-8);
        border-radius: var(--spacing-2);
        border: 1px solid var(--bp3-intent-color, var(--grey-200));
        outline: none;
        box-shadow: none;

        &:hover {
          border-color: var(--primary-6);
          box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.04), 0px 2px 4px rgba(96, 97, 112, 0.16);
        }

        &:focus {
          border-color: var(--primary-7);
        }

        &:disabled {
          background-color: var(--grey-50);
          color: var(--grey-400);
          border-color: var(--grey-200);
          box-shadow: none;
        }
      }
    }

    .bp3-label {
      color: var(--grey-600);
      font-size: var(--form-input-font-size);
      font-weight: 500;
    }

    .bp3-input.bp3-tag-input {
      overflow: auto;
      height: fit-content;
      max-height: 70px;
      &.bp3-disabled {
        background: var(--grey-50) !important;
      }
      &.bp3-active {
        --bp3-intent-color: var(--primary-5);
      }

      .bp3-tag-input-values {
        margin: 1px 7px 2px 1px !important;
      }
    }

    .bp3-file-input {
      height: 38px;
    }

    textarea.bp3-input {
      min-height: var(--spacing-10);
    }

    .bp3-file-upload-input {
      height: 38px;
      border-radius: 5px;
      box-shadow: none;
      border: 1px solid #dddddd;
      line-height: 36px;
      &:after {
        line-height: 28px;
        border: 1px solid var(--grey-350);
        box-shadow: none;
        background-image: none;
        color: var(--grey-600);
        background-color: var(--white);
      }
    }
    .bp3-input-ghost {
      font-size: 14px;
      line-height: 22px;
      padding-top: 2px;
    }

    .bp3-tag-input .bp3-tag {
      height: 22px;
      line-height: 22px;
      font-size: 14px;
      margin-top: 3px;
    }
  }
}

.checkBoxDocTooltipLabel {
  display: inline-block !important;
}

.inlineRadioGroup {
  padding-top: var(--spacing-2) !important;
}

